<resources>
    <string name="app_name">Schedule</string>
    <string name="schedule">Расписание</string>
    <string name="alarm">Будильник</string>
    <string name="settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="new_subject">Новый предмет</string>
    <string name="new_record">Новая запись</string>
    <string name="subject">Предмет</string>
    <string name="time">Время</string>
    <string name="teacher">Преподаватель</string>
    <string name="cabinet">Кабинет</string>


    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>

    <string name="example_subject">Пример: Высшая математика</string>
    <string name="example_time">Пример: 8:00–9:45</string>
    <string name="example_teacher">Пример: Иванов Иван Иванович</string>
    <string name="example_cabinet">Пример: 402</string>
    <string name="change_schedule">Изменение расписания</string>
    <string name="note">Заметка</string>
    <string name="start_lesson">Начало занятия</string>
    <string name="end_lesson">Конец занятия</string>
    <string name="notes">Заметки</string>
    <string name="add">Добавить</string>
    <string name="create">Создать</string>
    <string name="number_class">Номер занятия</string>
    <string name="week">Неделя</string>
    <string name="day_of_week">День недели</string>
    <string name="type_lesson">Тип занятия</string>

    <string-array name="menu_array">
        <item>Предметы</item>
        <item>Время пар</item>
        <item>Кабинеты</item>
        <item>Преподаватели</item>
    </string-array>

    <string-array name="day_of_week_array">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
    </string-array>

    <string-array name="type_array">
        <item>Практика</item>
        <item>Лабораторная</item>
        <item>Лекция</item>
    </string-array>

    <string-array name="number_week_array">
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
