<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

        <TextView
                android:id="@+id/name_record_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:layout_margin="16dp"
                android:textSize="25sp"
                android:text="@string/new_record"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_hint_data_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/subject">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_data_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        <requestFocus/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_b"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/save_b"
                android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/save_b"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:text="@string/save"/>

    </RelativeLayout>
</LinearLayout>