<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/label_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

        <TextView
                android:id="@+id/name_record_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:layout_margin="16dp"
                android:textSize="25sp"
                android:text="@string/time"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hint_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>

    <RelativeLayout
            android:id="@+id/buttons_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:elevation="4dp">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_b"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/create_b"
                android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/create_b"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:text="@string/create"/>

    </RelativeLayout>
</LinearLayout>