<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".schedule.menu_аdd.MenuAddActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/menu_add_tb"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_collapseMode="pin"
                app:title="@string/new_record"
                app:titleTextColor="@color/colorWhite"
                app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
                app:menu="@menu/add_toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="?actionBarSize">

            <RelativeLayout
                    android:id="@+id/type_week_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/type_week_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_sync_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/type_week_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/week"
                        android:layout_toEndOf="@id/type_week_iv"/>

                <ImageView
                        android:id="@+id/error_type_week_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_error_red_24dp"
                        android:visibility="gone"/>
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <RelativeLayout
                    android:id="@+id/day_of_week_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/day_of_week_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_today_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/day_of_week_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/day_of_week"
                        android:layout_toEndOf="@id/day_of_week_iv"/>

                <ImageView
                        android:id="@+id/error_day_of_week_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_error_red_24dp"
                        android:visibility="gone"/>
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <RelativeLayout
                    android:id="@+id/time_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/time_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_access_time_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/time"
                        android:layout_toEndOf="@id/time_iv"/>

                <ImageView
                        android:id="@+id/error_time_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_error_red_24dp"
                        android:visibility="gone"/>
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <RelativeLayout
                    android:id="@+id/subject_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/subject_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_subject_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/subject_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/subject"
                        android:layout_toEndOf="@id/subject_iv"/>

                <ImageView
                        android:id="@+id/error_subject_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_error_red_24dp"
                        android:visibility="gone"/>
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <RelativeLayout
                    android:id="@+id/cabinet_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/cabinet_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_cabinet_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/cabinet_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/cabinet"
                        android:layout_toEndOf="@id/cabinet_iv"/>

            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <RelativeLayout
                    android:id="@+id/teacher_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/teacher_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_person_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/teacher_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/teacher"
                        android:layout_toEndOf="@id/teacher_iv"/>

            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            <RelativeLayout
                    android:id="@+id/type_lesson_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="?android:selectableItemBackground">

                <ImageView
                        android:id="@+id/type_lesson_iv"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_types_classes_black_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/type_lesson_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="56dp"
                        android:padding="16dp"
                        android:textSize="16sp"
                        android:textColor="@color/colorGray"
                        android:text="@string/type_lesson"
                        android:layout_toEndOf="@id/type_lesson_iv"/>
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete_fab"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:layout_gravity="bottom|end"
                android:visibility="gone"
                android:src="@drawable/ic_delete_white_24dp"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>