<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

        <TextView
                android:id="@+id/name_record_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:layout_margin="16dp"
                android:textSize="25sp"
                android:text="@string/change_schedule"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/week_s"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:spinnerMode="dropdown"
                android:entries="@array/number_week_array"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/day_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                android:spinnerMode="dropdown"
                android:entries="@array/day_of_week_array"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/time_s"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                android:spinnerMode="dropdown"
                android:entries="@array/menu_array"
                android:layout_weight="2"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/type_s"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                style="@style/Base.Widget.MaterialComponents.TextInputLayout"
                android:spinnerMode="dropdown"
                android:entries="@array/type_array"
                android:layout_weight="2"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/subject_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:spinnerMode="dropdown"
            android:entries="@array/menu_array"/>


    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/cabinet_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:spinnerMode="dropdown"
            android:entries="@array/menu_array"/>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/teacher_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:spinnerMode="dropdown"
            android:entries="@array/menu_array"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_b"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/save_b"
                android:text="@string/cancel"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/save_b"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:text="@string/save"/>

    </RelativeLayout>

</LinearLayout>
